[package]
name = "stardust"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[dependencies]
anyhow = "1"
axum = "0.8"
axum-kit = { version = "0.6", features = ["postgres", "redis"] }
chrono = { version = "0.4", features = ["serde"] }
num-traits = "0.2"
redis = "0.30"
rust_decimal = { version = "1", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["chrono", "rust_decimal"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
validator = { version = "0.20", features = ["derive"] }
